# ML

./: CMakeLists.txt  README.md  cmake.yml
.github/workflows/: cmake.yml
include/: CSVReader.h  TFClassifier.h
src/: TFClassifier.cxx  main.cxx
tests/: ModelTest.cxx
